testsuite/tests/deriving/should_compile/T8758a.hs
{-# LANGUAGE GeneralizedNewtypeDeriving #-}

module T8758a where

import T8758

newtype MyList a = Mk [a]
  deriving C