testsuite/tests/deriving/should_fail/T2604.hs
{-# LANGUAGE GeneralizedNewtypeDeriving #-}

module Test where

import Data.Typeable

data DList a = DList [a] deriving(Typeable)

newtype NList a = NList [a] deriving(Typeable)
